k8s/hivebox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivebox-deployment
  labels:
    app: hivebox
    app.kubernetes.io/name: hivebox
    app.kubernetes.io/version: 0.2.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hivebox
  template:
    metadata:
      labels:
        app: hivebox
    spec:
      containers:
        - name: hivebox
          image: hivebox:0.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
