k8s/hivebox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hivebox-ingress
  labels:
    app: hivebox
    app.kubernetes.io/name: hivebox
    app.kubernetes.io/version: 0.2.0
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hivebox-service
                port:
                  number: 80
